--- a/dy/settings/storeMessage.html
+++ b/dy/settings/storeMessage.html
@@ -34,61 +34,64 @@
         <th>商品品牌</th>
         <th width="300">短标题</th>       
       </tr>      
-        <tr>
-          <td><input type="checkbox" name="id[]" value="1" />
-            T35335779</td>
-          <td>美国专柜 Bite限量口红唇笔套</td>
-          <td>13420925611</td>
-          <td>二代亚光眼影盘础款</td>  
-           <td>￥189.00</td>
-          <td>正品LAMER海蓝之谜精华乳霜</td>
-          <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" /><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" name="id[]" value="1" />
-           T35335779</td>
-          <td>美国专柜 Bite限量口红唇笔套</td>
-          <td>13420925611</td>
-          <td>二代亚光眼影盘基础款</td>  
-           <td>￥189.00</td>
-          <td>正品LAMER海蓝之谜精华乳霜</td>
-          <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" /><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
-        </tr>
-          <tr>
-          <td><input type="checkbox" name="id[]" value="1" />
-           T35335779</td>
-          <td>美国专柜 Bite限量口红唇笔套</td>
-          <td>13420925611</td>
-          <td>二代亚光眼影盘基础款</td>  
-           <td>￥189.00</td>
-          <td>正品LAMER海蓝之谜精华乳霜</td>
-          <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" /><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
-        </tr>
-          <tr>
-          <td><input type="checkbox" name="id[]" value="1" />
-            T35335779</td>
-          <td>美国专柜 Bite限量口红唇笔套</td>
-          <td>13420925611</td>
-          <td>二代亚光眼影盘基础款</td>  
-           <td>￥189.00</td>
-          <td>正品LAMER海蓝之谜精华乳霜</td>
-          <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" /><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
-        </tr>
-          <tr>
-          <td><input type="checkbox" name="id[]" value="1" />
-            T35335779</td>
-          <td>美国专柜 Bite限量口红唇笔套</td>
-          <td>13420925611</td>
-          <td>二代亚光眼影盘基础款</td>  
-           <td>￥189.00</td>
-          <td>正品LAMER海蓝之谜精华乳霜</td>
-          <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" /><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
-        </tr>
+      <tr>
+        <td><input type="checkbox" name="id[]" value="1" class="check_coding" />
+          T35335779</td>
+        <td>美国专柜 Bite限量口红唇笔套</td>
+        <td>13420925611</td>
+        <td>二代亚光眼影盘础款</td>  
+         <td>￥189.00</td>
+        <td>正品LAMER海蓝之谜精华乳霜</td>
+        <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" class="input_coding"/><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
+      </tr>
+      <tr>
+        <td><input type="checkbox" name="id[]" value="1" class="check_coding" />
+         T35335779</td>
+        <td>美国专柜 Bite限量口红唇笔套</td>
+        <td>13420925611</td>
+        <td>二代亚光眼影盘基础款</td>  
+         <td>￥189.00</td>
+        <td>正品LAMER海蓝之谜精华乳霜</td>
+        <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" class="input_coding" /><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
+      </tr>
+      <tr>
+        <td><input type="checkbox" name="id[]" value="1" class="check_coding"/>
+         T35335779</td>
+        <td>美国专柜 Bite限量口红唇笔套</td>
+        <td>13420925611</td>
+        <td>二代亚光眼影盘基础款</td>  
+         <td>￥189.00</td>
+        <td>正品LAMER海蓝之谜精华乳霜</td>
+        <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" class="input_coding"/><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
+      </tr>
+      <tr>
+        <td><input type="checkbox" name="id[]" value="1" class="check_coding"/>
+          T35335779</td>
+        <td>美国专柜 Bite限量口红唇笔套</td>
+        <td>13420925611</td>
+        <td>二代亚光眼影盘基础款</td>  
+         <td>￥189.00</td>
+        <td>正品LAMER海蓝之谜精华乳霜</td>
+        <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" class="input_coding"/><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
+      </tr>
+      <tr>
+        <td><input type="checkbox" name="id[]" value="1" class="check_coding" />
+          T35335779</td>
+        <td>美国专柜 Bite限量口红唇笔套</td>
+        <td>13420925611</td>
+        <td>二代亚光眼影盘基础款</td>  
+         <td>￥189.00</td>
+        <td>正品LAMER海蓝之谜精华乳霜</td>
+        <td><input type="text" name="sort[1]" value="正品LAMER海蓝" style="width:150px; text-align:center; border:1px solid #ddd; padding:7px 0;" class="input_coding" /><button type="submit" class="button"><span class="icon-edit"></span> 保存</button></td>
+      </tr>
       <tr>
         <td colspan="8"><div class="pagelist"> <a href="">上一页</a> <span class="current">1</span><a href="">2</a><a href="">3</a><a href="">下一页</a><a href="">尾页</a> </div></td>
       </tr>
     </table>
   </div>
+
+
+  <!-- 批量编辑弹出框 -->
   <div class="shade_compile">
     <div class="shade_beij">
       
@@ -102,7 +105,7 @@
                 <label>短标题：</label>
               </div>
               <div class="field" style="width: 80%;">
-                <input type="text" class="input" value="" name="title"/>
+                <input type="text" class="input shade_compile_text" value="" name="title"/>
                 <div class="tips"></div>
               </div>
             </div> 
@@ -111,7 +114,7 @@
                 <label></label>
               </div>
               <div class="field" style="width: 80%;">
-                <button class="button bg-main icon-check-square-o"> 提交</button>
+                <button class="button bg-main icon-check-square-o shade_compile_button"> 提交</button>
               </div>
             </div>
           </div>
